KNOX-3276: New configuration added to control CM Client SSL setup